--- a/tutorial/mkdocs.yml
+++ b/tutorial/mkdocs.yml
@@ -5,31 +5,34 @@ use_directory_urls: False
 theme: 'mkdocs'
 theme_dir: 'custom_theme'
 pages:
-- ["index.md", "Home"]
-- ["task.md", "Basics", "Tasks"]
-- ["learner.md", "Basics", "Learner"]
-- ["train.md", "Basics", "Train"]
-- ["predict.md", "Basics", "Predict"]
-- ["performance.md", "Basics", "Performance"]
-- ["resample.md", "Basics", "Resampling"]
-- ["benchmark_experiments.md", "Basics", "Benchmark Experiments"]
-- ["parallelization.md", "Basics", "Parallelization"]
-- ["configureMlr.md", "Advanced", "Configuration"]
-- ["wrapper.md", "Advanced", "Wrapped Learners"]
-- ["preproc.md", "Advanced", "Preprocessing"]
-- ["impute.md", "Advanced", "Imputations"]
-- ["bagging.md", "Advanced", "Bagging"]
-- ["tune.md", "Advanced", "Tuning"]
-- ["feature_selection.md", "Advanced", "Feature Selection"]
-- ["cost_sensitive_classif.md", "Advanced", "Cost-Sensitive Classification"]
-- ["over_and_undersampling.md", "Advanced", "Imbalanced Classification Problems"]
-- ["roc_analysis.md", "Advanced", "ROC Analysis"]
-- ["learning_curve.md", "Advanced", "Learning Curve"]
-- ["create_learner.md", "Extend", "Create Custom Learners"]
-- ["create_measure.md", "Extend", "Create Custom Measures"]
-- ["create_imputation.md", "Extend", "Create an Imputation Method"]
-- ["example_tasks.md", "Appendix", "Example Tasks"]
-- ["integrated_learners.md", "Appendix", "Integrated Learners"]
-- ["measures.md", "Appendix", "Implemented Performance Measures"]
-- ["filter_methods.md", "Appendix", "Integrated Filter Methods"]
-
+- Home: 'index.md'
+- Basics:
+    - 'Tasks': 'task.md'
+    - 'Learner': 'learner.md'
+    - 'Train': 'train.md'
+    - 'Predict': 'predict.md'
+    - 'Performance': 'performance.md'
+    - 'Resampling': 'resample.md'
+    - 'Benchmark Experiments': 'benchmark_experiments.md'
+    - 'Parallelization': 'parallelization.md'
+- Advanced:
+    - 'Configuration': 'configureMlr.md'
+    - 'Wrapped Learners': 'wrapper.md'
+    - 'Preprocessing': 'preproc.md'
+    - 'Imputations': 'impute.md'
+    - 'Bagging': 'bagging.md'
+    - 'Tuning': 'tune.md'
+    - 'Feature Selection': 'feature_selection.md'
+    - 'Cost-Sensitive Classification': 'cost_sensitive_classif.md'
+    - 'Imbalanced Classification Problems': 'over_and_undersampling.md'
+    - 'ROC Analysis': 'roc_analysis.md'
+    - 'Learning Curve': 'learning_curve.md'
+- Extend:
+    - 'Create Custom Learners': 'create_learner.md'
+    - 'Create Custom Measures': 'create_measure.md'
+    - 'Create an Imputation Method': 'create_imputation.md'
+- Appendix:
+    - 'Example Tasks': 'example_tasks.md'
+    - 'Integrated Learners': 'integrated_learners.md'
+    - 'Implemented Performance Measures': 'measures.md'
+    - 'Integrated Filter Methods': 'filter_methods.md'
